# paintbrush

./: .gitignore  CMakeLists.txt  README.md  canvas.cpp  canvas.h  colorpalette.cpp  colorpalette.h  form.ui  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  toolbar.cpp  toolbar.h
build-paintbrush-Desktop_Qt_6_2_1_Clang_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  paintbrush
build-paintbrush-Desktop_Qt_6_2_1_Clang_64bit-Debug/.cmake/api/v1/reply/: cache-v2-f5d95172fb09ab600690.json  cmakeFiles-v1-4bee417558325ba33a88.json  codemodel-v2-0c07c1a517e8c771025a.json  index-2022-02-03T07-31-19-0520.json  target-paintbrush-Debug-921b8669e35cddc9f34d.json  target-paintbrush_autogen_timestamp_deps-Debug-991eb68935c76742af69.json
build-paintbrush-Desktop_Qt_6_2_1_Clang_64bit-Debug/.cmake/api/v1/reply.prev/: codemodel-v2-261223fb0347872b40f4.json  index-2022-02-02T23-34-32-0525.json  target-paintbrush-Debug-4260fd5d986934caaf86.json  target-paintbrush_autogen-Debug-8679abe8c949cc2635c9.json
build-paintbrush-Desktop_Qt_6_2_1_Clang_64bit-Debug/paintbrush_autogen/: deps
build-paintbrush-Desktop_Qt_6_2_1_Clang_64bit-Debug/paintbrush_autogen/EWIEGA46WW/: moc_canvas.cpp  moc_canvas.cpp.d  qrc_resources.cpp
cursor/: fill.xpm  paintbrush.xpm  pencil.xpm
